--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -3,6 +3,7 @@
     "aws_region": "us-east-1",
     "django_settings": "app.settings_dev",
     "project_name": "my-zappa-function-name",
+    "exception_handler": "app.lambda.lambda_exception_handler",
     "runtime": "python3.6",
     "s3_bucket": "my-zappa-bucket",
     "xray_tracing": true
